Tue Nov  2 17:26:42 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Fixed the emitters for supported operations to include
          abstract interfaces in their traversals.

Tue Nov  2 09:59:15 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        
          Fixed some regular expressions, used to generate the servant
          header file ifdef guard and export macros, to recognize the
          file extension .cdl in addition to the existing patterns for
          .cidl and .idl. These particular regular expressions were
          overlooked in the checkin of
          
          Thu Sep 30 11:03:20 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

Tue Nov  2 04:45:44 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantSourceGenerator.cpp:

	  Addressing compile errors in Borland. Thanks to Johnny for the
	  suggestion.

Mon Nov  1 15:09:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * VERSION:
          Fixed description and mailing lists to use

Fri Oct 29 17:18:51 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIDLC/ServantSourceGenerator.cpp (namespace):

	  Fixed some weird VC6 issues reported by Theckla
	  Louchios<theckla.louchiois@lmco.com>.

Fri Oct 29 10:44:52 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/RepositoryManager/Repository_Manager.cpp;

          Cosmetic changes.

Mon Oct 25 07:31:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/Repository_Manager.cpp:
        * DAnCE/RepositoryManager/Repository_Manager_Impl.cpp:
          Use ACE auto_ptr instead of std::auto_ptr to fix compile problems
          with vc6.

Fri Oct 22 11:49:25 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/Config_Handlers/Config_Handlers.mpc:
